# QGit

./: .clang-format  .gitignore  CMakeLists.txt  QGit.pro  README.md  output.html
assets/: cloc.png.REMOVED.git-id  linux.png.REMOVED.git-id  repository-ref.png.REMOVED.git-id  snapshot-folder.png.REMOVED.git-id  welcome-open.png.REMOVED.git-id
src/: commit-detail.cpp  commit-item.cpp  commit-list.cpp  gitfs.cpp  main.cpp  reference-item.cpp  reference-list.cpp  repository.cpp  root.cpp  snapshot.cpp  tree-detail.cpp  tree-item.cpp  tree-list.cpp  tree-panel.cpp  welcome.cpp
src/commit/: detail.cpp  item.cpp  list.cpp  panel.cpp
src/headers/: commit-detail.h  commit-item.h  commit-list.h  constants.h  gitfs.h  repository.h  root.h  snapshot.h  tree-list.h  tree-panel.h  welcome.h
src/headers/commit/: detail.h  item.h  list.h  panel.h
src/headers/reference/: detail.h  item.h  list.h  panel.h
src/headers/tree/: detail.h  item.h  list.h  panel.h
src/reference/: detail.cpp  item.cpp  list.cpp  panel.cpp
src/resources/: resources.qrc
src/tree/: detail.cpp  item.cpp  list.cpp  panel.cpp
